--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "swiper": "^12.0.3",
     "tailwind-clamp": "^4.1.2",
     "tailwind-merge": "^3.0.2",
+    "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.0.6",
     "tw-animate-css": "^1.3.6"
   },
